Convert jena-integration-tests to JUnit5